--- a/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/Infrastructure.Data/Infrastructure.Data.csproj
@@ -50,10 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AtmRepository.cs" />
+    <Compile Include="PaymentGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="SessionFactory.cs" />
     <Compile Include="SnackMachineRepository.cs" />
+    <Compile Include="TableMapping\AtmMap.cs" />
     <Compile Include="TableMapping\SlotMap.cs" />
     <Compile Include="TableMapping\SnackMap.cs" />
     <Compile Include="TableMapping\SnackMachineMap.cs" />
