--- a/src/Domain.Test/Domain.Test.csproj
+++ b/src/Domain.Test/Domain.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="MoneyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnackMachineTest.cs" />
+    <Compile Include="AtmTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
