--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -49,22 +49,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateRoot.cs" />
-    <Compile Include="Entity.cs" />
+    <Compile Include="Atms\Atm.cs" />
+    <Compile Include="Common\AggregateRoot.cs" />
+    <Compile Include="Common\Entity.cs" />
+    <Compile Include="Management\HeadOffice.cs" />
+    <Compile Include="Repository\IAtmRepository.cs" />
+    <Compile Include="Repository\IPaymentGateway.cs" />
     <Compile Include="Repository\ISnackMachineRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Slot.cs" />
-    <Compile Include="Snack.cs" />
-    <Compile Include="SnackPile.cs" />
-    <Compile Include="Money.cs" />
-    <Compile Include="SnackMachine.cs" />
+    <Compile Include="SnackMachine\Slot.cs" />
+    <Compile Include="SnackMachine\Snack.cs" />
+    <Compile Include="SnackMachine\SnackPile.cs" />
+    <Compile Include="SharedKernel\Money.cs" />
+    <Compile Include="SnackMachine\SnackMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueObject.cs" />
+    <Compile Include="Common\ValueObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
