--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -56,17 +56,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AtmForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AtmForm.Designer.cs">
+      <DependentUpon>AtmForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SnackMachineForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SnackMachineForm.Designer.cs">
+      <DependentUpon>SnackMachineForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\SnackPileModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AtmForm.resx">
+      <DependentUpon>AtmForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SnackMachineForm.resx">
+      <DependentUpon>SnackMachineForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
