--- a/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/Infrastructure.Data/Infrastructure.Data.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventListener.cs" />
+    <Compile Include="HeadOfficeRepository.cs" />
     <Compile Include="AtmRepository.cs" />
     <Compile Include="PaymentGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="SessionFactory.cs" />
     <Compile Include="SnackMachineRepository.cs" />
     <Compile Include="TableMapping\AtmMap.cs" />
+    <Compile Include="TableMapping\HeadOfficeMap.cs" />
     <Compile Include="TableMapping\SlotMap.cs" />
     <Compile Include="TableMapping\SnackMap.cs" />
     <Compile Include="TableMapping\SnackMachineMap.cs" />
