--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -51,8 +51,15 @@
   <ItemGroup>
     <Compile Include="Atms\Atm.cs" />
     <Compile Include="Common\AggregateRoot.cs" />
+    <Compile Include="Common\DomainEvents.cs" />
     <Compile Include="Common\Entity.cs" />
+    <Compile Include="Common\IHandler.cs" />
+    <Compile Include="Common\IDomainEvent.cs" />
+    <Compile Include="Atms\BalanceChangedEvent.cs" />
+    <Compile Include="Management\BalanceChangedEventHandler.cs" />
     <Compile Include="Management\HeadOffice.cs" />
+    <Compile Include="Management\HeadOfficeInstance.cs" />
+    <Compile Include="Repository\IHeadOfficeRepository.cs" />
     <Compile Include="Repository\IAtmRepository.cs" />
     <Compile Include="Repository\IPaymentGateway.cs" />
     <Compile Include="Repository\ISnackMachineRepository.cs" />
