--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Model\SnackPileModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Initer.cs" />
     <EmbeddedResource Include="AtmForm.resx">
       <DependentUpon>AtmForm.cs</DependentUpon>
     </EmbeddedResource>
